fix overlay cutoff (#84)

--- a/frontend/src/components/popuppanel.module.css
+++ b/frontend/src/components/popuppanel.module.css
@@ -13,11 +13,12 @@
 }
 
 .overlay {
-	width: 100%;
-	height: 100%;
-	position: absolute;
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
 	background-color: rgba(0, 23, 36, 0.8);
-	overflow: hidden;
 	z-index: 5;
 }
 
